# wpe-android

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CROSS-BUILD.txt  LICENSE.md  README.md  bootstrap.py  build.gradle  gradle.properties  settings.gradle
WPEBackend-android/: CMakeLists.txt
WPEBackend-android/include/wpe-android/: view-backend-exportable.h
WPEBackend-android/src/: android.cpp  hacks.cpp  hacks.h  interfaces.h  ipc-android.h  ipc.cpp  ipc.h  renderer-backend-egl.cpp  renderer-host.cpp  view-backend-exportable.cpp  view-backend.cpp  view-backend.h
libwpe-android/: CMakeLists.txt
libwpe-android/src/: android.cpp  ipc.cpp  logging.h
tools/jni-test/: CMakeLists.txt  README.md
tools/jni-test/cpp/: JNI  Main.cpp  TestConstructors.cpp  TestConstructors.h  TestDuplexCalls.cpp  TestDuplexCalls.h  TestFields.cpp  TestFields.h  TestMethods.cpp  TestMethods.h  TestObjectArrays.cpp  TestObjectArrays.h  TestScalarArrays.cpp  TestScalarArrays.h  TestStaticFields.cpp  TestStaticFields.h  TestStaticMethods.cpp  TestStaticMethods.h
tools/jni-test/java/jni/: Test.java  TestConstructors.java  TestDuplexCalls.java  TestFields.java  TestMethods.java  TestObjectArrays.java  TestScalarArrays.java  TestStaticFields.java  TestStaticMethods.java
tv/: CMakeLists.txt  build.gradle
tv/src/main/: AndroidManifest.xml
tv/src/main/WPENetworkProcessGlue/: glue.cpp
tv/src/main/WPEUIProcessGlue/: glue.cpp  wpeinstance.cpp
tv/src/main/WPEWebProcessGlue/: glue.cpp
tv/src/main/assets/fontconfig/: fonts.conf
tv/src/main/res/values/: strings.xml
wpe/: CMakeLists.txt  build.gradle  cmds-aarch64.txt  lint.xml
wpe/imported/include/wpe-0.1/wpe/: renderer-backend-egl.h
wpe/imported/include/wpe-0.1/wpe-android/: view-backend-exportable.h
wpe/src/main/: AndroidManifest.xml
wpe/src/main/CommonGlue/: logging.h
wpe/src/main/WPEDatabaseProcessGlue/: entrypoints.cpp
wpe/src/main/WPENetworkProcessGlue/: entrypoints.cpp  glue.cpp
wpe/src/main/WPEStorageProcessGlue/: entrypoints.cpp
wpe/src/main/WPEUIProcessGlue/: entrypoints.cpp  wpeinstance.cpp  wpeinstance.h  wpeuiprocessglue.cpp  wpeuiprocessglue.h
wpe/src/main/WPEWebProcessGlue/: entrypoints.cpp
wpe/src/main/assets/mime/: globs
wpe/src/main/cpp/: CMakeLists.txt
wpe/src/main/cpp/Browser/: Browser.cpp  Browser.h  EntryPoint.cpp  EntryPoints.cpp  ExportedBuffer.h  Fence.cpp  InputMethodContext.cpp  InputMethodContext.h  LooperThread.cpp  LooperThread.h  MessagePump.cpp  MessagePump.h  Page.cpp  Page.h  PageEventObserver.cpp  PageEventObserver.h  PageSettings.cpp  PageSettings.h  Renderer.h  RendererASurfaceTransaction.cpp  RendererASurfaceTransaction.h  RendererFallback.cpp  RendererFallback.h  RendererSurfaceControl.cpp  RendererSurfaceControl.h  ScopedFD.h  SurfaceControl.cpp  SurfaceControl.h  WKCallback.cpp  WKCallback.h  WKCookieManager.cpp  WKCookieManager.h  WKNetworkSession.cpp  WKNetworkSession.h  WKSettings.cpp  WKSettings.h  WKWebContext.cpp  WKWebContext.h  WKWebView.cpp  WKWebView.h  (+4 more)
wpe/src/main/cpp/Common/: Environment.cpp  Environment.h  JNIHelper.cpp  JNIHelper.h  Logging.cpp  Logging.h  Service.cpp  Service.h
wpe/src/main/cpp/NetworkProcess/: EntryPoints.cpp
wpe/src/main/cpp/Runtime/: EntryPoint.cpp  Fence.h  InputMethodContext.cpp  LooperThread.cpp  LooperThread.h  MessagePump.cpp  MessagePump.h  SurfaceControl.cpp  WKRuntime.cpp  WKRuntime.h  WKSettings.cpp  WKWebView.cpp
wpe/src/main/cpp/Service/: EntryPoint.cpp
wpe/src/main/cpp/WebProcess/: EntryPoints.cpp
wpe/src/main/cpp/browser/: browser.cpp  browser.h  entrypoints.cpp  exportedbuffer.h  messagepump.cpp  messagepump.h  page.cpp  page.h  pageeventobserver.cpp  pageeventobserver.h  pagesettings.h  renderer.h  renderer_asurfacetransaction.cpp  renderer_asurfacetransaction.h  renderer_fallback.cpp  renderer_fallback.h
wpe/src/main/cpp/common/: environment.cpp  environment.h  jnihelper.h  logging.cpp  logging.h  service.cpp  service.h
wpe/src/main/cpp/networkprocess/: entrypoints.cpp
wpe/src/main/cpp/webprocess/: entrypoints.cpp
wpe/src/main/glue/browser/: browser.cpp  browser.h  entrypoints.cpp  exportedbuffer.h  inputmethodcontext.cpp  inputmethodcontext.h  looperthread.cpp  looperthread.h  page.cpp  page.h  pageeventobserver.cpp  pageeventobserver.h  renderer.h  renderer_asurfacetransaction.cpp  renderer_asurfacetransaction.h  renderer_fallback.cpp  renderer_fallback.h
wpe/src/main/glue/common/: jnihelper.cpp  jnihelper.h  logging.cpp  logging.h
wpe/src/main/glue/networkprocess/: entrypoints.cpp
wpe/src/main/glue/page/: entrypoints.cpp  glue.cpp  glue.h
wpe/src/main/glue/session/: entrypoints.cpp  glue.cpp  glue.h
wpe/src/main/glue/webprocess/: entrypoints.cpp
wpe/src/main/res/layout/: js_prompt.xml
wpeview/src/main/cpp/: CMakeLists.txt
wpeview/src/main/cpp/Common/: AndroidKeyMap.h  Environment.cpp  Init.cpp  Init.h  Logging.h  WPEDisplayAndroid.cpp  WPEDisplayAndroid.h  WPEInputMethodContextAndroid.cpp  WPEInputMethodContextAndroid.h  WPEToplevelAndroid.cpp  WPEToplevelAndroid.h
wpeview/src/main/cpp/Platform/: WPEDisplayAndroid.cpp  WPEDisplayAndroid.h  WPEInputMethodContextAndroid.cpp  WPEInputMethodContextAndroid.h  WPEKeymapAndroid.cpp  WPEKeymapAndroid.h  WPEScreenAndroid.cpp  WPEScreenAndroid.h  WPEScreenSyncObserverAndroid.cpp  WPEScreenSyncObserverAndroid.h  WPEToplevelAndroid.cpp  WPEToplevelAndroid.h  WPEViewAndroid.cpp  WPEViewAndroid.h
wpeview/src/main/cpp/Runtime/: EntryPoint.cpp  InputMethodContext.cpp  InputMethodContext.h  MessagePump.cpp  Renderer.h  RendererSurfaceControl.cpp  RendererSurfaceControl.h  ScopedFD.h  ScopedWPEAndroidBuffer.h  SurfaceControl.cpp  SurfaceControl.h  WKCallback.cpp  WKCallback.h  WKPowerProfileMonitor.cpp  WKPowerProfileMonitor.h  WKRuntime.cpp  WKRuntime.h  WKSettings.cpp  WKWebContext.h  WKWebView.cpp  WKWebView.h  WKWebsiteDataManager.cpp  WPEAndroidPowerProfileMonitor.cpp  WPEAndroidPowerProfileMonitor.h  WPEViewAndroid.cpp  WPEViewAndroid.h
wpeview/src/main/cpp/Service/: EntryPoint.cpp
(+423 files in other folders)
